cluster/core/netpol/sabnzbd.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: sabnzbd
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-sabnzbd-ingress
  namespace: sabnzbd
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: sabnzbd
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          ns: traefik
      podSelector:
        matchLabels:
          app.kubernetes.io/name: traefik
    ports:
    - port: 8080
      protocol: TCP
  - from:
    - ipBlock:
        cidr: 192.168.30.0/24
    - ipBlock:
        cidr: 192.168.0.0/24
    ports:
    - port: 8888
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          ns: jellyfin
      podSelector:
        matchLabels:
          app.kubernetes.io/name: jellyfin
    ports:
    - protocol: TCP
      port: 8888
  - from:
    - namespaceSelector:
        matchLabels:
          ns: jellyseerr
      podSelector:
        matchLabels:
          app.kubernetes.io/name: jellyseerr
    ports:
    - protocol: TCP
      port: 8888
  - from:
    - namespaceSelector:
        matchLabels:
          ns: prowlarr
      podSelector:
        matchLabels:
          app.kubernetes.io/name: prowlarr
    ports:
    - port: 8080
      protocol: TCP
    - port: 8888
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          ns: sonarr
      podSelector:
        matchLabels:
          app.kubernetes.io/name: sonarr
    - namespaceSelector:
        matchLabels:
          ns: sonarr
      podSelector:
        matchLabels:
          app.kubernetes.io/name: sonarr-anime
    - namespaceSelector:
        matchLabels:
          ns: sonarr
      podSelector:
        matchLabels:
          app.kubernetes.io/name: sonarr-remux
    ports:
    - port: 8080
      protocol: TCP
    - port: 8888
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          ns: radarr
      podSelector:
        matchLabels:
          app.kubernetes.io/name: radarr
    - namespaceSelector:
        matchLabels:
          ns: radarr
      podSelector:
        matchLabels:
          app.kubernetes.io/name: radarr-anime
    - namespaceSelector:
        matchLabels:
          ns: radarr
      podSelector:
        matchLabels:
          app.kubernetes.io/name: radarr-remux
    ports:
    - port: 8080
      protocol: TCP
    - port: 8888
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          ns: radarr
      podSelector:
        matchLabels:
          app.kubernetes.io/name: radarr-trailers
    ports:
    - port: 8888
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          ns: recyclarr
      podSelector:
        matchLabels:
          app.kubernetes.io/name: recyclarr
    ports:
    - protocol: TCP
      port: 8888
  - from:
    - namespaceSelector:
        matchLabels:
          ns: uptime
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: uptime
    ports:
    - protocol: TCP
      port: 8080

  - from:
    - namespaceSelector:
        matchLabels:
          ns: pinchflat
      podSelector:
        matchLabels:
          app.kubernetes.io/name: pinchflat
    ports:
    - protocol: TCP
      port: 8888
  - from:
    - namespaceSelector:
        matchLabels:
          ns: bazarr
      podSelector:
        matchLabels:
          app.kubernetes.io/name: bazarr
    ports:
    - protocol: TCP
      port: 8888
  - from:
    - namespaceSelector:
        matchLabels:
          ns: jellystat
      podSelector:
        matchLabels:
          app.kubernetes.io/name: jellystat
    ports:
    - protocol: TCP
      port: 8888
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-sabnzbd-egress
  namespace: sabnzbd
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/name: sabnzbd
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: adguard
      podSelector:
        matchLabels:
          app.kubernetes.io/name: adguard-work
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 192.168.0.10/32
    - ipBlock:
        cidr: 192.168.0.77/32
    - ipBlock:
        cidr: 192.168.0.78/32
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.0.0.0/8
        - 172.16.0.0/12
        - 192.168.0.0/16
    ports:
    - port: 51820
      protocol: UDP
